--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["Yaroslav Limanskiy <yaroslav.limanskiy@pandadoc.com>"]
 python = "^3.8"
 fastapi = "^0.70.0"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
+pytest = "^6.2.5"
+requests = "^2.26.0"
+httpx = "^0.21.1"
+trio = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 
