--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^6.2.5"
 requests = "^2.26.0"
 httpx = "^0.21.1"
 trio = "^0.19.0"
+black = "^21.11b1"
 
 [tool.poetry.dev-dependencies]
 
