--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^6.2.5"
 requests = "^2.26.0"
 httpx = "^0.21.1"
 trio = "^0.19.0"
+elasticsearch = {extras = ["async"], version = "^7.16.0"}
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
